# prism-slam

./: .gitignore  LICENSE  README.md  clean.sh  pyproject.toml  requirements.txt  setup.sh
examples/minimal_scene/meta/: 000001.json
examples/minimal_scene/primitives/: 000001.json
notebooks/: PRISM_SLAM_Colab.ipynb
scripts/: README.md  simulate_model_outputs.py  simulate_sim_output.py  validate_dataset.py  viz_rerun.py
src/prismslam/: matching.py  primitives.py
src/prismslam/datasets/: __init__.py
src/prismslam/schemas/: frame_meta.schema.json  primitive.schema.json
