[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismslam"
version = "0.0.1"
description = "PRISM-SLAM: Hybrid scene-coordinate + primitive-shape mapping for compact, navigation-grade SLAM"
authors = [{name = "PRISM-SLAM contributors"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]
